--- a/public/admin-static/config.yml
+++ b/public/admin-static/config.yml
@@ -2,6 +2,8 @@ backend:
   name: github
   repo: Xantar-86/kws-linkhout
   branch: main
+  base_url: https://kwslinkhout.be
+  auth_endpoint: /admin-static/auth.html
 
 publish_mode: editorial_workflow
 
