--- a/.github/workflows/notify-new-content.yml
+++ b/.github/workflows/notify-new-content.yml
@@ -10,57 +10,39 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
 
-      - name: Check if content changed
-        id: check
+      - name: Debug info
         run: |
-          CHANGED=$(git diff --name-only HEAD^ HEAD 2>/dev/null | grep -c "^content/" || echo "0")
-          echo "content_changed=$CHANGED" >> $GITHUB_OUTPUT
+          echo "=== DEBUG INFO ==="
           echo "Changed files:"
-          git diff --name-only HEAD^ HEAD 2>/dev/null | grep "^content/" || echo "Geen content wijzigingen"
-          echo "Author: $(git log -1 --pretty=format:'%an')"
-          echo "Message: $(git log -1 --pretty=format:'%s')"
+          git diff --name-only HEAD^ HEAD || echo "Could not get diff"
+          echo ""
+          echo "Full commit:"
+          git log -1 --format=full
+          echo ""
+          echo "Has webhook secret: ${{ secrets.DISCORD_WEBHOOK_URL != '' }}"
 
       - name: Send Discord notification
-        if: steps.check.outputs.content_changed != '0'
+        env:
+          WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
         run: |
-          AUTHOR=$(git log -1 --pretty=format:'%an')
-          MESSAGE=$(git log -1 --pretty=format:'%s')
+          if [ -z "$WEBHOOK" ]; then
+            echo "ERROR: DISCORD_WEBHOOK_URL is not set!"
+            exit 1
+          fi
           
-          curl -H "Content-Type: application/json" \
-            -X POST \
+          echo "Sending Discord notification..."
+          
+          curl -X POST \
+            -H "Content-Type: application/json" \
             -d '{
               "username": "KWS Linkhout CMS",
-              "avatar_url": "https://kwslinkhout.be/favicon.ico",
-              "embeds": [{
-                "title": "📝 Nieuwe content wacht op goedkeuring",
-                "description": "Er is nieuwe content toegevoegd aan de website.",
-                "color": 3447003,
-                "fields": [
-                  {
-                    "name": "Auteur",
-                    "value": "'"$AUTHOR"'",
-                    "inline": true
-                  },
-                  {
-                    "name": "Wijziging",
-                    "value": "'"$MESSAGE"'",
-                    "inline": false
-                  }
-                ],
-                "footer": {
-                  "text": "KWS Linkhout CMS"
-                },
-                "timestamp": "'"$(date -u +"%Y-%m-%dT%H:%M:%SZ")"'"
-              }],
-              "components": [{
-                "type": 1,
-                "components": [{
-                  "type": 2,
-                  "label": "🚀 Ga naar CMS",
-                  "style": 5,
-                  "url": "https://kwslinkhout.be/admin"
-                }]
-              }]
+              "content": "📝 Nieuwe content toegevoegd! Ga naar https://kwslinkhout.be/admin om te reviewen."
             }' \
-            ${{ secrets.DISCORD_WEBHOOK_URL }}
+            "$WEBHOOK"
+          
+          echo "Done!"
+        # Remove this 'if' to always send notifications (for testing)
+        if: contains(github.event.head_commit.message, 'Create') || contains(github.event.head_commit.message, 'Update')
