--- a/.github/workflows/notify-new-content.yml
+++ b/.github/workflows/notify-new-content.yml
@@ -3,6 +3,10 @@ name: Notify on New Content
 on:
   push:
     branches: [main]
+  pull_request:
+    types: [opened, synchronize, reopened]
+    paths:
+      - 'content/**'
 
 jobs:
   notify:
@@ -10,19 +14,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 2
-
-      - name: Debug info
-        run: |
-          echo "=== DEBUG INFO ==="
-          echo "Changed files:"
-          git diff --name-only HEAD^ HEAD || echo "Could not get diff"
-          echo ""
-          echo "Full commit:"
-          git log -1 --format=full
-          echo ""
-          echo "Has webhook secret: ${{ secrets.DISCORD_WEBHOOK_URL != '' }}"
 
       - name: Send Discord notification
         env:
@@ -33,16 +24,32 @@ jobs:
             exit 1
           fi
           
-          echo "Sending Discord notification..."
+          # Get info based on event type
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            TITLE="${{ github.event.pull_request.title }}"
+            AUTHOR="${{ github.event.pull_request.user.login }}"
+            URL="${{ github.event.pull_request.html_url }}"
+          else
+            TITLE="${{ github.event.head_commit.message }}"
+            AUTHOR="${{ github.event.head_commit.author.name }}"
+            URL="${{ github.event.head_commit.url }}"
+          fi
           
           curl -X POST \
             -H "Content-Type: application/json" \
-            -d '{
-              "username": "KWS Linkhout CMS",
-              "content": "📝 Nieuwe content toegevoegd! Ga naar https://kwslinkhout.be/admin om te reviewen."
-            }' \
+            -d "{
+              \"username\": \"KWS Linkhout CMS\",
+              \"embeds\": [{
+                \"title\": \"📝 Nieuwe content wacht op goedkeuring\",
+                \"description\": \"Er is nieuwe content toegevoegd die wacht op goedkeuring.\",
+                \"color\": 3447003,
+                \"fields\": [
+                  {\"name\": \"Auteur\", \"value\": \"$AUTHOR\", \"inline\": true},
+                  {\"name\": \"Titel\", \"value\": \"$TITLE\", \"inline\": false}
+                ]
+              }],
+              \"content\": \"Ga naar https://kwslinkhout.be/admin om te reviewen en te publiceren.\"
+            }" \
             "$WEBHOOK"
           
-          echo "Done!"
-        # Remove this 'if' to always send notifications (for testing)
-        if: contains(github.event.head_commit.message, 'Create') || contains(github.event.head_commit.message, 'Update')
+          echo "Discord notification sent!"
