--- a/.github/workflows/notify-new-content.yml
+++ b/.github/workflows/notify-new-content.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main]
   pull_request:
-    types: [opened, synchronize, reopened]
+    types: [opened, synchronize]
     paths:
       - 'content/**'
 
@@ -14,8 +14,26 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+
+      - name: Check for added/modified files only
+        id: check
+        run: |
+          # Get list of added or modified files (not deleted)
+          ADDED_FILES=$(git diff --name-only --diff-filter=ACM HEAD^ HEAD 2>/dev/null | grep "^content/" || true)
+          
+          if [ -n "$ADDED_FILES" ]; then
+            echo "has_new_content=true" >> $GITHUB_OUTPUT
+            echo "Added/modified files:"
+            echo "$ADDED_FILES"
+          else
+            echo "has_new_content=false" >> $GITHUB_OUTPUT
+            echo "No new content added (only deletions or no changes)"
+          fi
 
       - name: Send Discord notification
+        if: steps.check.outputs.has_new_content == 'true'
         env:
           WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
         run: |
@@ -28,11 +46,9 @@ jobs:
           if [ "${{ github.event_name }}" = "pull_request" ]; then
             TITLE="${{ github.event.pull_request.title }}"
             AUTHOR="${{ github.event.pull_request.user.login }}"
-            URL="${{ github.event.pull_request.html_url }}"
           else
             TITLE="${{ github.event.head_commit.message }}"
             AUTHOR="${{ github.event.head_commit.author.name }}"
-            URL="${{ github.event.head_commit.url }}"
           fi
           
           curl -X POST \
