--- a/.github/workflows/notify-new-content.yml
+++ b/.github/workflows/notify-new-content.yml
@@ -3,8 +3,6 @@ name: Notify on New Content
 on:
   push:
     branches: [main]
-  pull_request:
-    types: [opened, synchronize]
     paths:
       - 'content/**'
 
@@ -20,16 +18,12 @@ jobs:
       - name: Check for added/modified files only
         id: check
         run: |
-          # Get list of added or modified files (not deleted)
           ADDED_FILES=$(git diff --name-only --diff-filter=ACM HEAD^ HEAD 2>/dev/null | grep "^content/" || true)
-          
           if [ -n "$ADDED_FILES" ]; then
             echo "has_new_content=true" >> $GITHUB_OUTPUT
-            echo "Added/modified files:"
             echo "$ADDED_FILES"
           else
             echo "has_new_content=false" >> $GITHUB_OUTPUT
-            echo "No new content added (only deletions or no changes)"
           fi
 
       - name: Send Discord notification
@@ -37,35 +31,11 @@ jobs:
         env:
           WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
         run: |
-          if [ -z "$WEBHOOK" ]; then
-            echo "ERROR: DISCORD_WEBHOOK_URL is not set!"
-            exit 1
-          fi
-          
-          # Get info based on event type
-          if [ "${{ github.event_name }}" = "pull_request" ]; then
-            TITLE="${{ github.event.pull_request.title }}"
-            AUTHOR="${{ github.event.pull_request.user.login }}"
-          else
-            TITLE="${{ github.event.head_commit.message }}"
-            AUTHOR="${{ github.event.head_commit.author.name }}"
-          fi
-          
+          AUTHOR=$(git log -1 --pretty=format:'%an')
           curl -X POST \
             -H "Content-Type: application/json" \
             -d "{
               \"username\": \"KWS Linkhout CMS\",
-              \"embeds\": [{
-                \"title\": \"📝 Nieuwe content wacht op goedkeuring\",
-                \"description\": \"Er is nieuwe content toegevoegd die wacht op goedkeuring.\",
-                \"color\": 3447003,
-                \"fields\": [
-                  {\"name\": \"Auteur\", \"value\": \"$AUTHOR\", \"inline\": true},
-                  {\"name\": \"Titel\", \"value\": \"$TITLE\", \"inline\": false}
-                ]
-              }],
-              \"content\": \"Ga naar https://kwslinkhout.be/admin om te reviewen en te publiceren.\"
+              \"content\": \"📝 Nieuwe content door $AUTHOR\\nGa naar https://kwslinkhout.be/admin om te reviewen\"
             }" \
             "$WEBHOOK"
-          
-          echo "Discord notification sent!"
