--- a/public/admin-static/config.yml
+++ b/public/admin-static/config.yml
@@ -2,6 +2,8 @@ backend:
   name: github
   repo: Xantar-86/kws-linkhout
   branch: main
+  # Gebruik de standaard Decap CMS auth (geen custom handler)
+  # Gebruikers moeten een GitHub Personal Access Token invoeren
 
 publish_mode: editorial_workflow
 
